# 42-ai-bootcamp

./: .gitignore
00/ex01/: exec.py
00/ex02/: whois.py
00/ex03/: count.py
00/ex04/: operations.py
00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
00/ex06/: recipe.py
00/ex07/: filterwords.py
00/ex08/: sos.py
00/ex09/: guess.py
00/ex10/: loading.py
01/ex00/: book.py  recipe.py  test.py
01/ex01/: game.py
01/ex02/: test.py  vector.py
01/ex03/: generator.py
01/ex04/: eval.py
01/ex05/: the_bank.py
02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
02/ex01/: main.py
02/ex02/: logger.py
02/ex03/: csvreader.py  main.py
02/ex04/: build.sh  setup.cfg  setup.py
02/ex04/my_minipack/: __init__.py  csvreader.py  logger.py  progress.py
02/ex05/: TinyStatistician.py
03/ex00/: NumpyCreator.py
03/ex01/: ImageProcessor.py  example.py
03/ex02/: ScrapBooker.py  example.py
03/ex03/: ColorFilter.py  example.py
03/ex04/: Kmeans.py
03/resources/: chicken.png:Zone.Identifier  seeds_dataset.csv  solar_system_census.csv:Zone.Identifier  users_identification_1_10.csv
04/ex00/: example.py
04/ex01/: YoungestFellah.py  example.py
04/ex02/: ProportionBySport.py  example.py
04/ex03/: HowManyMedals.py  example.py
04/ex04/: SpatioTemporalData.py  example.py
04/ex05/: HowManyMedalsByCountry.py  example.py
04/ex06/: FileLoader.py  MyPlotLib.py  example.py
04/ex07/: Komparator.py  example.py
05/ex00/: matrix.py  test.py
05/ex01/: TinyStatistician.py  example.py
05/ex02/: example.py  prediction.py
05/ex03/: example.py  (+1 more)
(+95 files in other folders)
