[metadata]
name = my_minipack
version = 1.0.0
description = My package description
long_description = file: README.md, LICENSE.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
